
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int started; int hUSBDDevice; } ;
typedef TYPE_1__ pyb_usbdd_obj_t ;


 int USBD_Stop (int *) ;

__attribute__((used)) static void pyb_usbdd_stop(pyb_usbdd_obj_t *self) {
    if (self->started) {
        USBD_Stop(&self->hUSBDDevice);
        self->started = 0;
    }
}
